# workflows-presentation

.github/workflows/: build.yaml  env-action.yaml  first.yaml  secrets.yaml  sms.yaml
sample/: pyproject.toml
sample/sample/: main.py
