[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Ganesh Tiwari <ganesht049@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "sample.main:main"
